# workouts

./: .gitignore  LICENSE.md  README.md  io.github.AronCalvert.Workouts.yml  meson.build
data/: gschemas.compiled  io.github.AronCalvert.Workouts.desktop.in  io.github.AronCalvert.Workouts.metainfo.xml.in  meson.build
data/ui/: shortcuts.ui
gnome_workouts/: app.py  db.py  models.py  ui_utils.py  window.py
gnome_workouts/pages/: main_page.py  progress_page.py  workout_detail_page.py  workout_run_page.py
gnome_workouts/widgets/: __init__.py  timer_widget.py
po/: meson.build
src/: app.py  db.py
src/pages/: main_page.py  progress_page.py  workout_detail_page.py  workout_run_page.py
workouts/: app.py  db.py  meson.build  prefs.py
workouts/pages/: __init__.py  meson.build  progress_page.py
workouts/widgets/: meson.build
